@@ -36,7 +36,8 @@ OVERALL TODO
    Add git tag r-1 when switching
    
 * v0.0.5-252 (28 Oct. 2016 - ???) SLOC ?,??? FT ???:?? UT ?
-- (7) Fix the guile/unit tests issue
+- (8) Implement a basic GameState/StateManager system
+- Fix the guile/unit tests issue
 - Add a stats geometry buffer
 - Add a NyiDialog for the Options menu
 - Handle multiple NyiDialog per context
